@@ -54,7 +54,7 @@
          "url" : "git://github.com/Abigail/Acme--CPANAuthors--Booking.git"
       }
    },
-   "version" : "2012052501",
+   "version" : "2012062101",
    "x_test_requires" : {
       "Acme::CPANAuthors" : 0,
       "Test::More" : 0.88,
